Added interesting coordinates and more html

--- a/project-1/index.html
+++ b/project-1/index.html
@@ -46,7 +46,10 @@ Yaw Left and Right: J/L
   </style>
 </head>
 <body onload="main()">
-  <h2>Cityscape</h2>
+  <h2>Project 1: Ben LaFeldt & Michael Strating</h2>
+  <p>Move and Roll: WS/AD</p>
+  <p>Pitch and Yaw: IK/JL</p>
+  <p>Interesting points: 1, 2, 3</p>
   <div id="container">
     <canvas id="my-canvas"></canvas>
   </div>
