Added controls to each object and selector

--- a/project-1/index.html
+++ b/project-1/index.html
@@ -50,6 +50,12 @@ Yaw Left and Right: J/L
   <p>Move and Roll: WS/AD</p>
   <p>Pitch and Yaw: IK/JL</p>
   <p>Interesting points: 1, 2, 3</p>
+  Object Selection:
+  <select id="objSelect">
+    <option value="camera">Camera</option>
+    <option value="clock">Clock</option>
+    <option value="lib">Library</option>
+  </select>
   <div id="container">
     <canvas id="my-canvas"></canvas>
   </div>
