Added a tree object and linked the rest of the scene together

--- a/project-1/index.html
+++ b/project-1/index.html
@@ -26,6 +26,7 @@ Yaw Left and Right: J/L
   <script src="Olympic.js"></script>
   <script src="ClockTower.js"></script>
   <script src="GVLibrary.js"></script>
+  <script src="Tree.js"></script>
   <script src="render.js"></script>
   <style>
     html {
@@ -55,6 +56,10 @@ Yaw Left and Right: J/L
     <option value="camera">Camera</option>
     <option value="clock">Clock</option>
     <option value="lib">Library</option>
+    <option value="tree1">Tree1</option>
+    <option value="tree2">Tree2</option>
+    <option value="tree3">Tree3</option>
+    <option value="tree4">Tree4</option>
   </select>
   <div id="container">
     <canvas id="my-canvas"></canvas>
