Added light controls

--- a/project-2/app/index.html
+++ b/project-2/app/index.html
@@ -32,7 +32,13 @@
     <select id="objSelect">
       <option value="camera">Camera</option>
       <option value="testbox">TestBox</option>
+      <option value="light1">Light 1</option>
+      <option value="light2">Light 2</option>
     </select>
+    <input type="checkbox" id="light1" checked/>
+    <label>Light 1</label>
+    <input type="checkbox" id="light2" checked/>
+    <label>Light 2</label>
     <div id="container">
       <canvas id="mycanvas"></canvas>
     </div>
