--- a/project-2/app/index.html
+++ b/project-2/app/index.html
@@ -38,6 +38,8 @@
         <option value="TV">TV</option>
         <option value="Mario">Mario</option>
     </select>
+    Speed:
+    <input type="range" id="speed" min="0" value="1" max="5">
     <input type="checkbox" id="light1" checked/>
     <label>Light 1</label>
     <input type="checkbox" id="light2" checked/>
